add cname and special effect

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>Galactic Broadcasting Corporation</h1>
-				<p>24 hours of Elite news.<br/>Soon™</p>
+				<p>24 hours of Elite news. Soon™</p>
 			</header>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="https://discordapp.com/invite/9qsFF7B" class="icon-discord-logo-white"><span class="label"> Join our Discord</span></a></li>
+					<li><a href="https://discordapp.com/invite/9qsFF7B" class="icon icon-discord-logo-white"><span class="label"></span> Join our Discord</a></li>
+					<li><a href="http://www.specialeffect.org.uk/" class="icon fa-exclamation-circle"><span class="label"></span> Check out our Title Sponsor: Special Effect</a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; GBC 2017</li><li><a href="http://html5up.net">HTML5 UP</a></li>
